fix shareprice alignment

--- a/packages/tender-app/src/components/SharePrice/SharePrice.scss
+++ b/packages/tender-app/src/components/SharePrice/SharePrice.scss
@@ -1,6 +1,6 @@
 .price {
-  margin-top: 6px;
-  font-size: 3rem;
+  margin-top: 4px;
+  font-size: 2.25rem;
   font-weight: 900;
 }
 
@@ -9,7 +9,7 @@
 }
 
 .percent {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 600;
   margin-bottom: 10px;
 }
@@ -22,10 +22,7 @@
   margin-left: 12px;
 }
 
-.info-margin {
-  margin-left: 36px;
-}
 
 .tooltip {
-  z-index: 99999999999;
+  z-index: 9999;
 }
